# RAG-Backend

./: .env.example  ARCHITECTURE.md  DEPLOYMENT_FIX.md  README.md  pyproject.toml  requirements.txt
app/: chat_service.py  config.py  db_service.py  logger.py  main.py  models.py  pdf_loader.py  vector_store.py
app/core/: config.py  logger.py
app/loaders/: pdf_loader.py
app/routers/: api.py  models.py
app/services/: chat_service.py  db_service.py  vector_store.py
scripts/: init_qdrant_collection.py  test.py
tests/: test.py
